--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.7",
     "@react-navigation/native": "^7.0.0-alpha.6",
     "@react-navigation/stack": "^7.0.0-alpha.7",
+    "date-fns": "^3.3.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-get-random-values": "^1.10.0",
